# rpi-spotify-matrix-display

./: .gitignore  .gitmodules  Makefile  README.md  components.py  config.ini  emulator_config.json  lyrics_fetcher.py  main.py  matrix.service  player_fullscreen.py  player_lyrics.py  player_standard.py  pyproject.toml  requirements.txt  spotify_module.py  spotify_player.py
components/: __init__.py  album_art.py  art_cache.py  color_utils.py  play_indicator.py  progress_bar.py  scrolling_text.py
images/: output.mov
impl/: controller_overlay.py  controller_v3.py  emulator_config.json
impl/apps_v2/: spotify_player.py
impl/modules/: spotify_module.py
players/: __init__.py  player_fullscreen.py  player_lyrics.py  player_standard.py
transitions/: __init__.py  easing.py  player_transition.py  resize_transition.py  scale_transition.py  slide_transition.py
