[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-spotify-matrix-display"
version = "2.0.0"
description = "Raspberry Pi Spotify Matrix Display"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Kyle Johnson", email = "kyjohnson09@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=11.3.0",
    "numpy>=2.3.3",
    "requests>=2.32.5",
    "spotipy>=2.25.1",
    "RGBMatrixEmulator>=0.13.5",
]

[project.urls]
Homepage = "https://github.com/kylejohnsonkj/rpi-spotify-matrix-display"

[project.scripts]
spotify-matrix = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
