[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-spotify-matrix-display"
version = "2.0.0"
description = "Raspberry Pi Spotify Matrix Display"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Kyle Johnson", email = "kyjohnson09@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "Pillow<12",
    "urllib3<2",
    "numpy",
    "requests",
    "spotipy",
    "RGBMatrixEmulator",
    "librelyrics",
    "librelyrics-spotify",
]

[project.urls]
Homepage = "https://github.com/kylejohnsonkj/rpi-spotify-matrix-display"

[project.scripts]
spotify-matrix = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
